// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <hr
      class="sc-iktFzd cUYtuc sc-hiSbYr ioExYC"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <hr
      class="sc-iktFzd cJCAjm sc-hiSbYr ioExYC"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <hr
      class="sc-iktFzd cbtjSH sc-hiSbYr bmzuUW"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ kCgyvI sc-hHftDr bxfdfp sc-hiSbYr ioExYC"
    >
      <hr
        class="sc-iktFzd sc-jJEJSO cUYtuc dceFUj"
        type="dashed"
      />
      <span
        class="sc-fKFyDc jHCVxA sc-iwyYcG fZreIp"
      >
        some text
      </span>
      <hr
        class="sc-iktFzd sc-jJEJSO cUYtuc dceFUj"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
